# cookiecutter-templates

./: README.md
pyproject/: cookiecutter.json
pyproject/{{cookiecutter.repo_name}}/: .editorconfig  README.md  noxfile.py  pyproject.toml
pyproject/{{cookiecutter.repo_name}}/.github/workflows/: style_and_tests.yml
pyproject/{{cookiecutter.repo_name}}/tests/unit/: test_arithmetic.py
