[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = ""
authors = ["{{ cookiecutter.name }} {{ cookiecutter.email }}"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src", "tests"]
python_version = "3.11"
strict = true
namespace_packages = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
